--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -1,32 +1,41 @@
-.nav-bar{
-    width: 100%;
-}
 .logo{
     width: 100px;
     padding: 5px;
+}
+.content{
+    width: 80%;
+    margin: 0% auto;
 }
 .social-icon{
     width: 30px;
     padding: 0px 10px;
 }
-ul{
+nav ul{
     float: right;
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
-li{
+nav li{
     display: inline;
 }
-.content{
-    width: 80%;
-    margin: 0px auto;
-}
-p{
+.content p{
     text-indent: 50px;
     text-align: justify;
 }
-.indent-content{
+.indent{
     width: 95%;
-    float: right;
+    margin-left: 5%;
+}
+footer{
+    background-color: grey;
+    height: auto;
+}
+.footer-content{
+    width: 30%;
+    margin: 0px auto;
+}
+.footer-content div{
+    display: inline-block;
+    padding: 0% 10%;
 }
